tests/baselines/reference/jsxDeclarationsWithEsModuleInteropNoCrash.errors.txt
jsxDeclarationsWithEsModuleInteropNoCrash.jsx(2,1): error TS18056: Declaration file contains hand-written file reference directives: "..react16.d.ts"


==== jsxDeclarationsWithEsModuleInteropNoCrash.jsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import PropTypes from 'prop-types';
    ~~~~~~
!!! error TS18056: Declaration file contains hand-written file reference directives: "..react16.d.ts"
    import React from 'react';
    
    const propTypes = {
      bar: PropTypes.bool,
    };
    
    const defaultProps = {
      bar: false,
    };
    
    function Foo({ bar }) {
      return <div>{bar}</div>;
    }
    
    Foo.propTypes = propTypes;
    Foo.defaultProps = defaultProps;
    
    export default Foo;